wp-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wp-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpressweb
        image: wbchokouago/cr460-ts2018:latest
        ports:
        - containerPort: 80
      - name: wordpressdb
        image: mysql
